--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open",
+    "allure:generate": "allure generate allure-results --clean -o allure-report",
+    "allure:open": "allure open allure-report",
+    "allure:report": "npm run allure:generate && npm run allure:open",
+    "cypress:report": "node cypress/support/runCypressAndAllure.js"
+    
   },
   "keywords": [],
   "author": "",
@@ -11,8 +18,11 @@
   "description": "",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.2",
+    "@shelex/cypress-allure-plugin": "^2.40.2",
+    "allure-commandline": "^2.30.0",
+    "allure-cypress": "^3.0.0-beta.12",
     "cypress": "^13.14.1",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "webpack": "^5.94.0"
   }
 }
