--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "cypress_demo",
+  "name": "parabank-test-automation-demo",
   "version": "1.0.0",
+  "description": "Automated tests for ParaBank using Cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cypress run",
     "cypress:run": "cypress run",
-    "cypress:open": "cypress open",
-    "allure:generate": "allure generate allure-results --clean -o allure-report",
-    "allure:open": "allure open allure-report",
-    "allure:report": "npm run allure:generate && npm run allure:open",
-    "cypress:report": "node cypress/support/runCypressAndAllure.js"
-    
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.2",
-    "@shelex/cypress-allure-plugin": "^2.40.2",
-    "allure-commandline": "^2.30.0",
-    "allure-cypress": "^3.0.0-beta.12",
+    "@faker-js/faker": "^9.8.0",
     "cypress": "^13.14.1",
     "faker": "^5.5.3",
     "webpack": "^5.94.0"
